# ab-testing-platform

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml  requirements.txt  tox.ini  wrangler.toml
ab_testing_platform/: __main__.py  api.py  pipeline.py
ab_testing_platform/lib/: bayesian.py  bucketing.py  corrections.py  frequentist.py  utils.py
ab_testing_platform/lib/bayesian/: __init__.py  bayesian_ab_test.py  plotting.py  results.py  utils.py
ab_testing_platform/lib/bucketing/: __init__.py  bayesian_test.py  frequentist_test.py  user_bucketing_ab_test.py  utils.py
ab_testing_platform/lib/corrections/: __init__.py  benjamini_hochberg.py  bonferroni.py  holm.py  multiple_testing_correction.py  statsmodels.py
ab_testing_platform/lib/frequentist/: __init__.py  calculations.py  frequentist_ab_test.py  plotting.py  validation.py
static/: index.html
tests/fixtures/: ab-testing-users.json
