[tool.poetry]
name = "ab-testing-platform"
version = "0.1.0"
description = "An AB Testing Platform that I'm building on the side"
authors = ["Nicholas Griffin"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
statsmodels = "^0.14.3"
matplotlib = "^3.9.2"
scipy = "^1.14.1"
pymc = "^5.16.2"
arviz = "^0.19.0"
seaborn = "^0.13.2"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
click = "^8.1.7"
python-multipart = "^0.0.10"

simplejson = "^3.19.3"
[tool.poetry.dev-dependencies]
tox = "^4.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ab-testing-platform = "ab_testing_platform.__main__:cli"
ab-testing-platform-api = "uvicorn:main"
